--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
-  postgres:
-    image: postgres:16-alpine
+  postgres17:
+    image: postgres:17-alpine
     restart: unless-stopped
     environment:
       POSTGRES_USER: commondbpguser
@@ -10,9 +10,9 @@ services:
     ports:
       - 7432:5432
     volumes:
-      - common_db_data_dockerized:/var/lib/postgresql/data
+      - pg17_data:/var/lib/postgresql/data
       - ./sql-files:/sql-files
     working_dir: /sql-files
 
 volumes:
-  common_db_data_dockerized:
+  pg17_data:
